// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Field/SelectField Basic 1`] = `
Array [
  <div
    className="psds-field__container"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="downshift-0-toggle-button"
      id="downshift-0-label"
    >
      Choose an element
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium psds-field--suffix"
      >
        <button
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          data-css-1xqnm3u=""
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <span>
            Do something
          </span>
          <div
            className="psds-field__suffix"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>,
  <div
    style={
      Object {
        "border": "2px dashed pink",
        "display": "none",
        "height": 200,
        "margin": "20px 0",
        "overflow": "scroll",
        "padding": 20,
      }
    }
  >
    <ul
      aria-labelledby="downshift-0-label"
      id="downshift-0-menu"
      onBlur={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      role="listbox"
      tabIndex={-1}
    >
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-0"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Hydrogen
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-1"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Helium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-2"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Lithium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-3"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Beryllium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-4"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Boron
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-5"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Carbon
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-6"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Nitrogren
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-7"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Oxygen
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-8"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Fluorine
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-9"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Neon
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-10"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Sodium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-11"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Magnesium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-12"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Aluminum
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-13"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Silicon
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-14"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Phosphorus
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-15"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Sulfur
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-16"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Chlorine
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-17"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Argon
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-18"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Potassium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-19"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Calcium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-20"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Scandium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-21"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Titanium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-22"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Vanadium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-23"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Chromium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-24"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Manganese
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-25"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Iron
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-26"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Cobalt
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-27"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Nickel
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-28"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Copper
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-29"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Zinc
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-30"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Gallium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-31"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Germanium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-32"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Arsenic
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-33"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Selenium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-34"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Bromine
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-35"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Krypton
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-36"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Rubidium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-37"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Strontium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-38"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Yttrium
           
        </span>
      </li>
      <li
        aria-selected="false"
        data-css-1gkxtmt=""
        id="downshift-0-item-39"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
      >
        <span>
          Zirconium
           
        </span>
      </li>
    </ul>
  </div>,
]
`;

exports[`Storyshots Components/Field/TextAreaField Basic 1`] = `
<div
  className="psds-field__container"
  onClick={[Function]}
>
  <label
    className="psds-field__label psds-theme--dark"
    htmlFor="text-area__area-unique-id"
    id="text-area__label-unique-id"
  >
    Text area label area
  </label>
  <div
    className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
  >
    <div
      className="psds-field psds-field--medium"
    >
      <div
        className="psds-field__text-area__container"
      >
        <textarea
          className="psds-field__text-area"
          id="text-area__area-unique-id"
          onChange={[Function]}
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="psds-field__sub-label psds-theme--dark"
  >
    Area for additional information
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextAreaField Disabled 1`] = `
<div
  className="psds-field__container psds-field__container--disabled"
  onClick={[Function]}
>
  <label
    className="psds-field__label psds-theme--dark"
    htmlFor="text-area__area-unique-id"
    id="text-area__label-unique-id"
  >
    Text area label area
  </label>
  <div
    className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
  >
    <div
      className="psds-field psds-field--medium"
    >
      <div
        className="psds-field__text-area__container"
      >
        <textarea
          className="psds-field__text-area psds-field__text-area--disabled"
          disabled={true}
          id="text-area__area-unique-id"
          onChange={[Function]}
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="psds-field__sub-label psds-theme--dark"
  >
    Area for additional information
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextAreaField Error 1`] = `
<div
  className="psds-field__container psds-field__container--error"
  onClick={[Function]}
>
  <label
    className="psds-field__label psds-theme--dark"
    htmlFor="text-area__area-unique-id"
    id="text-area__label-unique-id"
  >
    Text area label area
  </label>
  <div
    className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus psds-field__halo"
  >
    <div
      className="psds-field psds-field--medium"
    >
      <div
        className="psds-field__text-area__container"
      >
        <textarea
          className="psds-field__text-area"
          id="text-area__area-unique-id"
          onChange={[Function]}
          value=""
        />
      </div>
      <div
        className="psds-field__error-icon"
      >
        <div
          className="psds-icon psds-icon--size-medium"
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5zm0-4h-1a.5.5 0 0 1-.5-.5V7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6.5a.5.5 0 0 1-.5.5z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="psds-field__sub-label psds-theme--dark"
  >
    Area for additional information
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextAreaField With Placeholder 1`] = `
<div
  className="psds-field__container"
  onClick={[Function]}
>
  <label
    className="psds-field__label psds-theme--dark"
    htmlFor="text-area__area-unique-id"
    id="text-area__label-unique-id"
  >
    Text area label area
  </label>
  <div
    className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
  >
    <div
      className="psds-field psds-field--medium"
    >
      <div
        className="psds-field__text-area__container"
      >
        <textarea
          className="psds-field__text-area"
          id="text-area__area-unique-id"
          onChange={[Function]}
          placeholder="Enter some text here"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="psds-field__sub-label psds-theme--dark"
  >
    Area for additional information
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Basic 1`] = `
<div
  data-css-z8g6as=""
>
  <div
    className="psds-field__container"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium"
      >
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--medium"
            id="text-input__input-unique-id"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Custom Input Tag 1`] = `
<div
  data-css-z8g6as=""
>
  <div
    className="psds-field__container"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium"
      >
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--medium"
            id="text-input__input-unique-id"
            placeholder="tag from render prop"
            style={
              Object {
                "outline": "1px dashed pink",
              }
            }
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Disabled 1`] = `
<div
  data-css-z8g6as=""
>
  <div
    className="psds-field__container psds-field__container--disabled"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium"
      >
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--medium"
            disabled={true}
            id="text-input__input-unique-id"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Error 1`] = `
<div
  data-css-z8g6as=""
>
  <div
    className="psds-field__container psds-field__container--error"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium"
      >
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--medium"
            id="text-input__input-unique-id"
            type="text"
          />
        </div>
        <div
          className="psds-field__error-icon"
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5zm0-4h-1a.5.5 0 0 1-.5-.5V7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6.5a.5.5 0 0 1-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Icon Prefix 1`] = `
<div
  data-css-z8g6as=""
>
  <div
    className="psds-field__container"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium psds-field--prefix"
      >
        <div
          className="psds-field__prefix"
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 0 1 .9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 0 0 .9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 0 0 .9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 0 1 .9.9zM11 8.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5V11h2.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H13v2.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5V13H8.5a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5H11V8.5z"
              />
            </svg>
          </div>
        </div>
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--medium"
            id="text-input__input-unique-id"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Icon Suffix 1`] = `
<div
  data-css-z8g6as=""
>
  <div
    className="psds-field__container"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium psds-field--suffix"
      >
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--medium"
            id="text-input__input-unique-id"
            type="text"
          />
        </div>
        <div
          className="psds-field__suffix"
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 0 1 .9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 0 0 .9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 0 0 .9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 0 1 .9.9zM11 8.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5V11h2.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H13v2.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5V13H8.5a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5H11V8.5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Password Type 1`] = `
<div
  data-css-z8g6as=""
>
  <div
    className="psds-field__container"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium psds-field--suffix"
      >
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--medium"
            id="text-input__input-unique-id"
            type="password"
          />
        </div>
        <div
          className="psds-field__suffix"
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="lock icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M13.5 15.5a1.5 1.5 0 1 1-3.001 0 1.5 1.5 0 0 1 3.001 0M17 8v2c1.103 0 2 .897 2 2v7c0 1.104-.897 2-2 2H7c-1.103 0-2-.896-2-2v-7c0-1.103.897-2 2-2V8c0-2.756 2.243-5 5-5s5 2.244 5 5zM7 19h10.001L17 12H7v7zM9 8v2h6V8c0-1.653-1.346-3-3-3S9 6.348 9 8z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Size Small 1`] = `
<div
  data-css-z8g6as=""
>
  <div
    className="psds-field__container"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--small"
      >
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--small"
            id="text-input__input-unique-id"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Style Override Display Block 1`] = `
<div
  data-css-z8g6as=""
>
  <div
    data-css-nz1bk1=""
  >
    <div
      data-css-pifd7f=""
    >
      <div
        className="psds-field__container"
        onClick={[Function]}
        style={
          Object {
            "display": "block",
          }
        }
      >
        <label
          className="psds-field__label psds-theme--dark"
          htmlFor="text-input__input-unique-id"
          id="text-input__label-unique-id"
        >
          Text input label area
        </label>
        <div
          className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
        >
          <div
            className="psds-field psds-field--medium"
          >
            <div
              className="psds-field__input__container"
            >
              <input
                className="psds-field__input psds-field__input--medium"
                id="text-input__input-unique-id"
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          className="psds-field__sub-label psds-theme--dark"
        >
          Area for additional information
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField With Placeholder 1`] = `
<div
  data-css-z8g6as=""
>
  <div
    className="psds-field__container"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium"
      >
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--medium"
            id="text-input__input-unique-id"
            placeholder="Enter some text here"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;
